MDEV-33937 fix deadlock counter